# RPKG-Tool

./: .cirrus.yml  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  rpkg.sln  rpkg.sln.DotSettings
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: build.yml  pr-comment.yml
RPKG-GUI/: App.config  App.xaml  ColorPicker.xaml.cs  DownloadExtractionProgress.xaml  Licenses.xaml  Licenses.xaml.cs  MapFilter.xaml.cs  README.md  RightClickMenu.xaml  UserSettings.cs  rpkg-gui.csproj  rpkg.sln
RPKG-GUI/Properties/: Resources.Designer.cs
RPKG-GUI/Resources/: JSON-Dark.xshd  i2
map_editor/: main.vcxproj  main.vcxproj.filters  resources.rc
map_editor/data-files/: g3d-license.txt  log.txt
map_editor/data-files/scenes/: empty.Scene.Any
map_editor/source/: App.cpp  App.h
rpkg/: rpkg.sln  rpkg.vcxproj  rpkg.vcxproj.filters
rpkg-cli/: rpkg-cli.vcxproj  rpkg-cli.vcxproj.filters
rpkg-gui/: .gitignore  App.xaml  App.xaml.cs  AttachedNodeViewModel.cs  BaseViewModel.cs  ColorPicker.xaml  ColorPicker.xaml.cs  Converters.cs  DelegateCommand.cs  DownloadExtractionProgress.xaml.cs  EntityBrickEditor.xaml  EntityBrickEditor.xaml.cs  EntityBrickViewer.xaml  EntityBrickViewer.xaml.cs  Filter.xaml.cs  FodyWeavers.xml  G3dHwndHost.cs  HashCalculator.xaml  HashCalculator.xaml.cs  Licenses.xaml  Licenses.xaml.cs  MainViewModel.cs  MainWindow.xaml  MainWindow.xaml.cs  MapEditorViewport.xaml  MapEditorViewport.xaml.cs  MapExportProgress.xaml  MapExportProgress.xaml.cs  MapFilter.xaml  MapFilter.xaml.cs  MapImportProgress.xaml  MapImportProgress.xaml.cs  MapImportSelector.xaml  MapImportSelector.xaml.cs  Message.xaml.cs  MessageQuestion.xaml  MessageQuestion.xaml.cs  ObservableObject.cs  Progress.xaml  Progress.xaml.cs  (+7 more)
rpkg-gui/Controls/: ItemDetails.xaml  ItemDetails.xaml.cs
rpkg-gui/Extensions/: EnumerableExtensions.cs
rpkg-gui/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
rpkg-gui/ResourceActions/: ActionRegistry.cs  IAction.cs  IBulkAction.cs
rpkg-gui/ResourceActions/Attributes/: BulkCommonActionAttribute.cs  BulkResourceActionAttribute.cs  CommonActionAttribute.cs  ResourceActionAttribute.cs
rpkg-gui/ResourceActions/CommonActions/: BulkExtractAction.cs  ExtractAction.cs
rpkg-gui/Resources/: JSON-Light.xshd  i1  i3
rpkg-gui/Utils/: HashUtils.cs  WindowUtils.cs
rpkg/gui/rpkg/: rpkg.sln
rpkg/rpkg/: LICENSE.rpkg  md5.c  md5.h  rpkg.cpp  rpkg.sln  rpkg.vcxproj  rpkg.vcxproj.filters
rpkg/rpkg/rpkg/: rpkg.vcxproj  rpkg.vcxproj.filters
rpkg/rpkg/rpkg-cli/: rpkg-cli.vcxproj  rpkg-cli.vcxproj.filters
rpkg/rpkg/rpkg_src/: borg.cpp  borg.h  command_json.cpp  command_line.cpp  command_line.h  compute_ioi_hash.cpp  compute_ioi_hash_from_file.cpp  compute_ioi_hash_string.cpp  console.cpp  decrypt_packagedefinition_thumbs.cpp  dev_diff_rpkg_supermetas.cpp  dev_extract_all_entity_ids.cpp  dev_extract_all_strings.cpp  dev_extract_materials_textures_strings.cpp  dev_extract_ores_strings.cpp  dev_extract_rpkg_supermetas.cpp  dev_extract_temp_from.cpp  dev_extract_temp_pointers.cpp  dev_extract_temp_strings.cpp  dev_extract_wwem_strings.cpp  dev_function.h  dev_map_editor.cpp  dev_resource_tool.cpp  encrypt_packagedefinition_thumbs.cpp  extract_all_prim_from.cpp  extract_all_prim_model_from.cpp  extract_all_prim_model_of_temp_from.cpp  extract_all_prim_of_temp_from.cpp  extract_all_text_from.cpp  extract_direct_hash_depends.cpp  extract_dlge_to_json_from.cpp  extract_from_rpkg.cpp  (+68 more)
rpkg_src/: borg.cpp  borg.h  command_json.cpp  command_line.cpp  command_line.h  compute_ioi_hash.cpp  compute_ioi_hash_from_file.cpp  compute_ioi_hash_string.cpp  console.cpp  console.h  crc32.h  crypto.cpp  crypto.h  decrypt_packagedefinition_thumbs.cpp  dev_compute_ioi_hash.cpp  dev_diff_rpkg_supermetas.cpp  dev_dlge_names.cpp  dev_extract_all_entity_ids.cpp  dev_extract_all_hashes_in_game.cpp  dev_extract_all_strings.cpp  dev_extract_materials_textures_strings.cpp  dev_extract_ores_strings.cpp  dev_extract_rpkg_supermetas.cpp  dev_extract_temp_from.cpp  dev_extract_temp_pointers.cpp  dev_extract_temp_strings.cpp  dev_extract_wwem_strings.cpp  dev_extract_wwes_strings.cpp  dev_extract_wwev_strings.cpp  dev_extract_wwise_ids.cpp  dev_function.h  dev_hash_list_percent_found.cpp  dev_map_editor.cpp  dev_resource_tool.cpp  encrypt_packagedefinition_thumbs.cpp  entity.cpp  entity.h  extract_all_hash_depends_from.cpp  extract_all_prim_from.cpp  extract_all_prim_model_from.cpp  (+110 more)
rpkg_src/experimental/: dev_diff_rpkg_supermetas.cpp  dev_extract_all_hashes_in_game.cpp  dev_extract_all_strings.cpp  dev_extract_materials_textures_strings.cpp  dev_extract_ores_strings.cpp  dev_extract_rpkg_supermetas.cpp  dev_extract_temp_from.cpp  dev_extract_temp_pointers.cpp  dev_extract_wwem_strings.cpp  dev_extract_wwes_strings.cpp  dev_extract_wwev_strings.cpp  dev_extract_wwise_ids.cpp  dev_function.h  dev_hash_list_percent_found.cpp  dev_map_editor.cpp  dev_resource_tool.cpp
src/: asva.cpp  asva.h  borg.cpp  borg.h  compute_ioi_hash.cpp  compute_ioi_hash_from_file.cpp  console.cpp  console.h  crc32.h  crypto.cpp  crypto.h  decrypt_packagedefinition_thumbs.cpp  dev_diff_rpkg_supermetas.cpp  dev_dlge_names.cpp  dev_extract_all_entities_to_qn.cpp  dev_extract_all_strings.cpp  dev_extract_rpkg_supermetas.cpp  dev_extract_wwem_strings.cpp  dev_extract_wwes_strings.cpp  dev_extract_wwev_strings.cpp  dev_extract_wwise_ids.cpp  dev_function.h  dev_hash_list_percent_found.cpp  dev_map_editor.cpp  encrypt_packagedefinition_thumbs.cpp  entity.cpp  entity.h  extract_all_hash_depends_from.cpp  extract_all_materials_to_json.cpp  extract_all_prim_from.cpp  extract_all_prim_model_from.cpp  extract_all_prim_model_of_temp_from.cpp  extract_all_prim_of_temp_from.cpp  extract_all_text_from.cpp  extract_asva_to_json.cpp  extract_direct_hash_depends_from.cpp  extract_dlge_to_json_from.cpp  extract_entity_to_qn.cpp  extract_from_rpkg.cpp  extract_from_rpkg_with_map.cpp  (+118 more)
src/cli/: command_line.cpp  command_line.h  main.cpp
src/lib/: rpkg_dll.cpp  rpkg_dll.h
(+38 files in other folders)
